--- a/tmpl/web/ru/index.html
+++ b/tmpl/web/ru/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>TeqFW CMS Demo</title>
-</head>
-<body>
-Это русская демо-страница.
-</body>
-</html>
+{% extends "inc/layout.html" %}
+
+{% block title %}Добро пожаловать в Tequila CMS{% endblock %}
+
+{% block content %}
+<h1>Привет!</h1>
+<p>Это главная страница вашего нового сайта, созданного с помощью Nunjucks.</p>
+<p>Используйте навигационное меню, чтобы перейти на другие страницы.</p>
+{% endblock %}
