--- a/tmpl/web/en/inc/layout.html
+++ b/tmpl/web/en/inc/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}My Site{% endblock %}</title>
+    <title>{% block title %}My site{% endblock %}</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
