--- a/tmpl/web/en/inc/nav.html
+++ b/tmpl/web/en/inc/nav.html
@@ -2,6 +2,6 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a href="/contact">Contacts</a></li>
     </ul>
 </nav>
