--- a/tmpl/web/en/visitor.html
+++ b/tmpl/web/en/visitor.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Visitor Info</title>
-</head>
-<body>
+{% extends "inc/layout.html" %}
+
+{% block title %}Welcome to Tequila CMS{% endblock %}
+
+{% block content %}
 <h1>Visitor Information</h1>
 <ul>
     <li><strong>IP Address:</strong> {{ client.ip }}</li>
@@ -12,5 +10,4 @@
     <li><strong>Preferred Language:</strong> {{ client.lang }}</li>
     <li><strong>Requested Path:</strong> {{ url.path }}</li>
 </ul>
-</body>
-</html>
+{% endblock %}
