--- a/tmpl/web/ru/index.html
+++ b/tmpl/web/ru/index.html
@@ -3,7 +3,15 @@
 {% block title %}Добро пожаловать в Tequila CMS{% endblock %}
 
 {% block content %}
-<h1>Привет!</h1>
-<p>Это главная страница вашего нового сайта, созданного с помощью Nunjucks.</p>
-<p>Используйте навигационное меню, чтобы перейти на другие страницы.</p>
+<h1>Tequila CMS — минималистичная и расширяемая система управления контентом</h1>
+<p>Эта система разработана специально для современных проектов, где контент — это код, а локализация и генерация страниц
+    выполняются с помощью ИИ.</p>
+<p>Tequila CMS использует файловую структуру для хранения шаблонов и данных, обеспечивая прозрачность, контроль версий и
+    лёгкую интеграцию в CI/CD.</p>
+<p>Благодаря внедрению зависимостей на основе соглашений и серверному рендерингу, вы можете быстро развернуть
+    мультиязычный сайт без сложных конфигураций.</p>
+<p>Включённая система автоматического перевода позволяет генерировать локализованные страницы по мере обновления
+    оригиналов, используя мощь LLM.</p>
+<p>Чтобы начать работу, воспользуйтесь меню навигации. Вы также можете открыть пример страницы или изучить структуру
+    проекта.</p>
 {% endblock %}
