WF-805 Add a locale switcher to the demo CMS

--- a/tmpl/web/en/inc/nav.html
+++ b/tmpl/web/en/inc/nav.html
@@ -1,7 +1,8 @@
 <nav>
-    <ul>
+    <ul class="main-menu">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a href="/contact">Contacts</a></li>
     </ul>
+    {% include "inc/locales.html" %}
 </nav>
