--- a/tmpl/web/ru/inc/nav.html
+++ b/tmpl/web/ru/inc/nav.html
@@ -1,7 +1,8 @@
 <nav>
-    <ul>
+    <ul class="main-menu">
         <li><a href="/">Начало</a></li>
         <li><a href="/about">Инфо</a></li>
         <li><a href="/contact">Контакты</a></li>
     </ul>
+    {% include "inc/locales.html" %}
 </nav>
