--- a/tmpl/web/en/index.html
+++ b/tmpl/web/en/index.html
@@ -3,10 +3,10 @@
 {% block title %}Welcome to Tequila CMS{% endblock %}
 
 {% block content %}
-<h1>Tequila CMS — a minimalist and extensible content management system</h1>
+<h1>Tequila CMS — a minimalistic and extensible content management system</h1>
 <p>This system is specifically designed for modern projects where content is code, and localization and page generation are handled by AI.</p>
-<p>Tequila CMS uses a file-based structure for storing templates and data, ensuring transparency, version control, and easy CI/CD integration.</p>
-<p>With convention-based dependency injection and server-side rendering, you can quickly deploy a multilingual website without complex configurations.</p>
-<p>The built-in automatic translation system allows generating localized pages as originals are updated, leveraging the power of LLMs.</p>
+<p>Tequila CMS uses a file structure to store templates and data, ensuring transparency, version control, and easy integration with CI/CD.</p>
+<p>With conventional dependency injection and server-side rendering, you can quickly deploy a multilingual site without complex configurations.</p>
+<p>The built-in automatic translation system allows generating localized pages as originals are updated, leveraging LLM capabilities.</p>
 <p>To get started, use the navigation menu. You can also open a sample page or explore the project structure.</p>
 {% endblock %}
