WF-809 Make a concept for the site

--- a/tmpl/web/en/contact.html
+++ b/tmpl/web/en/contact.html
@@ -3,5 +3,11 @@
 {% block title %}Contacts — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Contact us via email, GitHub or Telegram.</p>
+<h1>Contacts</h1>
+
+<ul>
+    <li>Email: <a href="mailto:alex@wiredgeese.com">alex@wiredgeese.com</a></li>
+    <li>GitHub: <a href="https://github.com/flancer64" target="_blank">github.com/flancer64</a></li>
+    <li>Telegram: <a href="https://t.me/wiredgeese" target="_blank">@wiredgeese</a></li>
+</ul>
 {% endblock %}
