--- a/tmpl/web/en/faq.html
+++ b/tmpl/web/en/faq.html
@@ -3,5 +3,8 @@
 {% block title %}FAQ — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Frequently asked questions about TeqCMS.</p>
+<h1>Frequently Asked Questions</h1>
+
+<p>No questions yet — but they will appear as the project develops.</p>
+<p>If you have a question, please contact me via the <a href="/{{ locale }}/contact.html">contact page</a>.</p>
 {% endblock %}
