--- a/tmpl/web/ru/about.html
+++ b/tmpl/web/ru/about.html
@@ -1,7 +1,35 @@
 {% extends "inc/layout.html" %}
 
-{% block title %}О TeqCMS и авторе{% endblock %}
+{% block title %}О проекте TeqCMS{% endblock %}
 
 {% block content %}
-<p>TeqCMS - это минималистичная CMS для сайтов на Node.js с AI-локализацией и git-управлением. Создана одним разработчиком - Алексом Гусевым - как эксперимент: можно ли создавать многоязычные сайты без баз данных, админ-панелей и фреймворков. Весь код, включая эту страницу, редактируется как обычные файлы. Разработка ведётся в сотрудничестве с LLM.</p>
+<h1>О проекте</h1>
+<p><strong>TeqCMS</strong> — это минималистичная CMS для Node.js-сайтов с поддержкой многоязычности, SSR и
+    автоматических переводов через LLM. Проект создан как внутренняя инфраструктура для <a
+            href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a> — расширения для кастомного
+    GPT-чата.</p>
+
+<p>Главная задача — иметь управляемый через git сайт с SEO-френдли URL и встроенной AI-локализацией. Чтобы реализовать
+    это без избыточной архитектуры, CMS основана только на собственном модуле <a href="https://github.com/teqfw/di"
+                                                                                 target="_blank"><code>@teqfw/di</code></a>,
+    реализующем
+    внедрение зависимостей в чистом JavaScript без TypeScript и сторонних фреймворков.</p>
+
+<p>Код создавался в одиночку с активным использованием языковых моделей (GPT Web UI, DeepSeek API). Почти каждый файл
+    проекта прошёл через диалог с LLM. JSDoc-аннотации активно применяются для формирования локального когнитивного
+    контекста.</p>
+
+<p>Разработка базовых пакетов и интеграция с демо-сервером заняли около полутора недель. Далее шло наполнение контентом
+    и расширение возможностей:</p>
+
+<ul>
+    <li><a href="https://github.com/flancer32/teq-web" target="_blank">teq-web</a> — веб-часть (роутинг, nodejs-сервер)
+    </li>
+    <li><a href="https://github.com/flancer32/teq-tmpl" target="_blank">teq-tmpl</a> — шаблоны и рендеринг</li>
+    <li><a href="https://github.com/flancer32/teq-cms" target="_blank">teq-cms</a> — функциональность CMS</li>
+    <li><a href="https://github.com/flancer32/teq-cms-demo" target="_blank">teq-cms-demo</a> — пример сайта</li>
+</ul>
+
+<p>TeqCMS работает с любым сервером на базе Node.js (Express, Fastify и др.), а также напрямую через HTTP-модули.
+    Встроена поддержка шаблонизаторов Mustache и Nunjucks — этот список легко расширяется.</p>
 {% endblock %}
