--- a/tmpl/web/ru/contact.html
+++ b/tmpl/web/ru/contact.html
@@ -3,5 +3,11 @@
 {% block title %}Контакты — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Свяжитесь с нами по email, GitHub или Telegram.</p>
+<h1>Контакты</h1>
+
+<ul>
+    <li>Email: <a href="mailto:alex@wiredgeese.com">alex@wiredgeese.com</a></li>
+    <li>GitHub: <a href="https://github.com/flancer64" target="_blank">github.com/flancer64</a></li>
+    <li>Telegram: <a href="https://t.me/wiredgeese" target="_blank">@wiredgeese</a></li>
+</ul>
 {% endblock %}
