--- a/tmpl/web/ru/faq.html
+++ b/tmpl/web/ru/faq.html
@@ -3,5 +3,8 @@
 {% block title %}FAQ — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Часто задаваемые вопросы о TeqCMS.</p>
+<h1>Часто задаваемые вопросы</h1>
+
+<p>Пока что вопросов нет — но они появятся по мере развития проекта.</p>
+<p>Если у вас есть вопрос, свяжитесь со мной через <a href="/{{ locale }}/contact.html">контактную страницу</a>.</p>
 {% endblock %}
