--- a/tmpl/web/ru/features/file-based.html
+++ b/tmpl/web/ru/features/file-based.html
@@ -3,5 +3,21 @@
 {% block title %}Файловая система — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Никаких баз данных, никаких панелей администрирования — только файлы.</p>
+<h1>Файловая структура вместо базы данных</h1>
+
+<p><strong>TeqCMS</strong> принципиально избегает использования баз данных и админ-панелей. Вся работа с сайтом сводится
+    к управлению файлами, которые находятся под версионным контролем (git).</p>
+
+<ul>
+    <li><code>tmpl/web/{locale}/</code> — локализованные шаблоны и страницы (HTML)</li>
+    <li><code>web/</code> — статические ресурсы: изображения, стили, JS</li>
+</ul>
+
+<p>Изменения в базовой локали вносятся в рабочей (девелоперской) среде. Затем запускается AI-перевод и создаются версии
+    страниц для других языков. Всё это фиксируется в git: каждый перевод, каждая правка остаются в истории коммитов.</p>
+
+<p>После коммита можно выполнить <strong>push</strong> на GitHub и развернуть изменения на продакшн — вручную или через
+    GitHub Actions. Такая структура облегчает совместную разработку, аудит изменений и перенос между окружениями.</p>
+
+<p><a href="/{{ locale }}/features/ssr.html">Подробнее о серверном рендеринге →</a></p>
 {% endblock %}
