--- a/tmpl/web/ru/features/ssr.html
+++ b/tmpl/web/ru/features/ssr.html
@@ -1,7 +1,28 @@
 {% extends "inc/layout.html" %}
 
-{% block title %}Ssr — TeqCMS{% endblock %}
+{% block title %}SSR — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Серверный рендеринг с использованием шаблонизаторов, таких как Nunjucks.</p>
+<h1>Серверный рендеринг (SSR)</h1>
+
+<p><strong>TeqCMS</strong> использует серверный рендеринг для генерации HTML-страниц на основе шаблонов. Это
+    обеспечивает быстрый отклик, полную совместимость с поисковыми системами и предсказуемое поведение сайта без
+    необходимости в клиентском JavaScript.</p>
+
+<p>Рендеринг реализуется через пакеты <a href="https://github.com/flancer32/teq-tmpl" target="_blank">@flancer32/teq-tmpl</a>
+    и <a href="https://github.com/flancer32/teq-cms" target="_blank">@flancer32/teq-cms</a>, которые собирают финальные
+    страницы из шаблонных фрагментов. Поддерживаются два движка: <strong>Nunjucks</strong> и <strong>Mustache</strong>,
+    а архитектура позволяет подключать и другие.</p>
+
+<p>Если для нужной локали отсутствует конкретный фрагмент, TeqCMS автоматически использует шаблон из базовой локали. Это
+    повышает надёжность и гибкость при работе с многоязычными сайтами.</p>
+
+<p>Важно: локаль, используемая для отображения страниц, <strong>не обязана</strong> совпадать с базовой локалью, из
+    которой выполняются переводы. Например, переводы можно делать из русской версии, а в качестве основной версии сайта
+    — показывать английскую. Это поведение настраивается явно.</p>
+
+<p>Рендеринг происходит полностью на стороне сервера, что обеспечивает SEO-оптимизацию и простоту деплоя без сборочных
+    пайплайнов.</p>
+
+<p><a href="/{{ locale }}/features/ai-localization.html">Как шаблоны локализуются с помощью LLM →</a></p>
 {% endblock %}
