--- a/tmpl/web/ru/inc/nav.html
+++ b/tmpl/web/ru/inc/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <ul class="main-menu">
         <li><a href="/{{ locale }}/">Главная</a></li>
-        <li><a href="/{{ locale }}/about.html">Информация</a></li>
+        <li><a href="/{{ locale }}/about.html">О проекте</a></li>
         <li>
             <span>Услуги</span>
             <ul>
