--- a/tmpl/web/ru/index.html
+++ b/tmpl/web/ru/index.html
@@ -1,12 +1,27 @@
 {% extends "inc/layout.html" %}
 
-{% block title %}Добро пожаловать в Tequila CMS{% endblock %}
+{% block title %}Tequila CMS — контент как код, AI как переводчик{% endblock %}
 
 {% block content %}
-<h1>Tequila CMS — минималистичная и расширяемая система управления контентом</h1>
-<p>Эта система специально разработана для современных проектов, где контент — это код, а локализация и генерация страниц обрабатываются ИИ.</p>
-<p>Tequila CMS использует файловую структуру для хранения шаблонов и данных, обеспечивая прозрачность, контроль версий и простую интеграцию с CI/CD.</p>
-<p>С конвенциональным внедрением зависимостей и серверным рендерингом вы можете быстро развернуть многоязычный сайт без сложных конфигураций.</p>
-<p>Встроенная система автоматического перевода позволяет генерировать локализованные страницы по мере обновления оригиналов, используя возможности LLM.</p>
-<p>Чтобы начать, воспользуйтесь навигационным меню. Вы также можете открыть пример страницы или изучить структуру проекта.</p>
+<h1>Tequila CMS — минималистичная AI-ориентированная CMS без БД и админок</h1>
+
+<p><strong>TeqCMS</strong> — это способ управлять многоязычным сайтом как кодом. Контент хранится в файлах,
+    редактируется через git и переводится автоматически с помощью LLM.</p>
+
+<div style="text-align: center; margin: 2em 0;">
+    <img src="/img/schema/overview.png" alt="CMS architecture overview" style="max-width:100%; height:auto;">
+</div>
+
+<ul>
+    <li>⏱ Быстрый старт: развертывание без сборок и баз данных</li>
+    <li>🌍 AI-локализация: переводы обновляются сами по себе</li>
+    <li>💾 Прозрачность: весь сайт — это обычные HTML-файлы</li>
+    <li>🔌 SSR + шаблоны: Nunjucks, Mustache или просто HTML</li>
+    <li>🤖 Разработка в паре с LLM: поддержка промптов на уровне страниц</li>
+</ul>
+
+<p>TeqCMS идеально подходит для лендингов, документации, SaaS-промо и инди-проектов с международной аудиторией.</p>
+
+<p><a href="/features/content-as-code.html">Узнать больше о «контенте как код»</a> или <a href="/services/setup.html">заказать
+    настройку</a>.</p>
 {% endblock %}
