--- a/tmpl/web/ru/features/content-as-code.html
+++ b/tmpl/web/ru/features/content-as-code.html
@@ -3,5 +3,21 @@
 {% block title %}Контент как код — TeqCMS{% endblock %}
 
 {% block content %}
-<p>Управляйте всем контентом сайта как версионируемым кодом.</p>
+<h1>Контент как код</h1>
+
+<p><strong>TeqCMS</strong> реализует принцип «контент как код» — все страницы, шаблоны и переводы хранятся в обычных
+    файлах и управляются через git. Это упрощает разработку, локализацию и сопровождение сайта.</p>
+
+<ul>
+    <li>📁 HTML-страницы, шаблоны и стили — это обычные файлы в проекте</li>
+    <li>📝 Изменения редактируются в любимом редакторе, без CMS-интерфейса</li>
+    <li>🔀 История изменений фиксируется в git: можно сравнивать, откатывать, комментировать</li>
+    <li>🤝 Совместная работа с другими участниками происходит как при работе с кодом</li>
+    <li>⚙️ Структура проекта соответствует структуре URL, всё прозрачно и предсказуемо</li>
+</ul>
+
+<p>Подход идеально подходит для лендингов, промо-сайтов, документации и других проектов, где важна простота, контроль и
+    независимость от админок и баз данных.</p>
+
+<p><a href="/{{ locale }}/features/ai-localization.html">Как работает AI-локализация →</a></p>
 {% endblock %}
