WF-809 Make a concept for the site

--- a/tmpl/web/en/inc/nav.html
+++ b/tmpl/web/en/inc/nav.html
@@ -2,14 +2,7 @@
     <ul class="main-menu">
         <li><a href="/{{ locale }}/">Home</a></li>
         <li><a href="/{{ locale }}/about.html">About</a></li>
-        <li>
-            <span>Services</span>
-            <ul>
-                <li><a href="/{{ locale }}/services/setup.html">Setup</a></li>
-                <li><a href="/{{ locale }}/services/customization.html">Customization</a></li>
-                <li><a href="/{{ locale }}/services/consulting.html">Consulting</a></li>
-            </ul>
-        </li>
+        <li><a href="/{{ locale }}/services.html">Services</a></li>
         <li>
             <span>Features</span>
             <ul>
