--- a/tmpl/web/en/index.html
+++ b/tmpl/web/en/index.html
@@ -3,10 +3,10 @@
 {% block title %}Tequila CMS — content as code, AI as translator{% endblock %}
 
 {% block content %}
-<h1>Tequila CMS — minimalistic AI-oriented CMS without databases or admin panels</h1>
+<h1>Tequila CMS — minimalist AI-oriented CMS without databases or admin panels</h1>
 
 <p><strong>TeqCMS</strong> is a way to manage a multilingual website as code. Content is stored in files,
-    edited via git and automatically translated using LLMs.</p>
+    edited via git and automatically translated using LLM.</p>
 
 <div style="text-align: center; margin: 2em 0;">
     <img src="/img/schema/overview.png" alt="CMS architecture overview" style="max-width:100%; height:auto;">
@@ -15,13 +15,14 @@
 <ul>
     <li>⏱ Quick start: deployment without builds or databases</li>
     <li>🌍 AI localization: translations update themselves</li>
-    <li>💾 Transparency: the entire site consists of regular HTML files</li>
+    <li>💾 Transparency: the entire site is just regular HTML files</li>
     <li>🔌 SSR + templates: Nunjucks, Mustache or plain HTML</li>
-    <li>🤖 LLM-assisted development: page-level prompt support</li>
+    <li>🤖 LLM-powered development: page-level prompt support</li>
 </ul>
 
 <p>TeqCMS is perfect for landing pages, documentation, SaaS promotions and indie projects with international audiences.</p>
 
-<p><a href="/features/content-as-code.html">Learn more about "content as code"</a> or <a href="/services/setup.html">order
-    setup</a>.</p>
+<p><a href="/{{ locale }}/features/content-as-code.html">Learn more about "content as code"</a> or <a
+        href="/{{ locale }}/contact.html">order
+    customization</a>.</p>
 {% endblock %}
