--- a/tmpl/web/ru/inc/nav.html
+++ b/tmpl/web/ru/inc/nav.html
@@ -2,14 +2,7 @@
     <ul class="main-menu">
         <li><a href="/{{ locale }}/">Главная</a></li>
         <li><a href="/{{ locale }}/about.html">О проекте</a></li>
-        <li>
-            <span>Услуги</span>
-            <ul>
-                <li><a href="/{{ locale }}/services/setup.html">Настройка</a></li>
-                <li><a href="/{{ locale }}/services/customization.html">Кастомизация</a></li>
-                <li><a href="/{{ locale }}/services/consulting.html">Консалтинг</a></li>
-            </ul>
-        </li>
+        <li><a href="/{{ locale }}/services.html">Услуги</a></li>
         <li>
             <span>Возможности</span>
             <ul>
