--- a/tmpl/web/ru/index.html
+++ b/tmpl/web/ru/index.html
@@ -22,6 +22,7 @@
 
 <p>TeqCMS идеально подходит для лендингов, документации, SaaS-промо и инди-проектов с международной аудиторией.</p>
 
-<p><a href="/features/content-as-code.html">Узнать больше о «контенте как код»</a> или <a href="/services/setup.html">заказать
+<p><a href="/{{ locale }}/features/content-as-code.html">Узнать больше о «контенте как код»</a> или <a
+        href="/{{ locale }}/contact.html">заказать
     настройку</a>.</p>
 {% endblock %}
